--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://ClemensSW.github.io/chess-game",
+  "homepage": "https://clemenssw.github.io/chess-game/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
